packages/jsii/test/negatives/neg.internal-underscore-class.5.ts
///!MATCH_ERROR: the name of members marked as @internal must begin with an underscore

export class MyClass {
  /** @internal */
  public propertyWithInternalButNotUnderscorePrefix?: string;
}
